Fixed the scrollbar height for xp sp3 ie6
set 'font-size:0' for the scrollbar

--- a/src/perfect-scrollbar.css
+++ b/src/perfect-scrollbar.css
@@ -8,6 +8,7 @@
     position: absolute; /* please don't change 'position' */
     bottom: 3px; /* there must be 'bottom' for ps-scrollbar-x */
     height: 8px;
+    font-size: 0; /* fixed scrollbar height in xp sp3 ie6 */
     background-color: #aaa;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
@@ -42,6 +43,7 @@
     position: absolute; /* please don't change 'position' */
     right: 3px; /* there must be 'right' for ps-scrollbar-y */
     width: 8px;
+    font-size: 0;/* fixed scrollbar height in xp sp3 ie6 */
     background-color: #aaa;
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
